--- a/index.html
+++ b/index.html
@@ -53,21 +53,15 @@
             <h2 class="site-subtitle">Cybersecurity & Software Engineer</h2>
         </header>
 
-        <!-- Elevator Pitch Section -->
+        <!-- Elevator Pitch Section - Now a Placeholder -->
         <section class="section-box elevator-pitch-section" id="elevator-pitch" aria-labelledby="pitch-heading">
             <h2 id="pitch-heading">Innovating for a Secure Digital Future</h2>
             <p>
                 To leverage my passion for cybersecurity, software development, and Linux to architect and secure robust technology infrastructure solutions, empowering organizations to thrive in a resilient digital world.
             </p>
-            <div class="video-container" aria-label="Your pitch video">
-                <!-- YouTube Embed -->
-                <iframe 
-                    src="https://www.youtube.com/embed/mvykTntqiFI" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                    allowfullscreen 
-                    title="Kingsley Koech's Elevator Pitch Video">
-                </iframe>
+            <div class="video-placeholder" aria-label="Placeholder for your pitch video">
+                <img src="https://placehold.co/560x315/333/64FFDA?text=Your+Pitch+Video+Here" alt="Placeholder for pitch video">
+                <button class="play-button" aria-label="Play video">►</button>
             </div>
             <a href="#portfolio" class="cta-button">Explore My Work</a>
         </section>
@@ -90,8 +84,7 @@
                 <div class="skill-item">
                     <i class="fas fa-paint-brush" aria-hidden="true"></i> <span>CSS</span>
                 </div>
-                <div class="skill-item">
-                    <i class="fab fa-linux" aria-hidden="true"></i> <span>Linux-based CLI</span>
+                <div class="fab fa-linux" aria-hidden="true"></i> <span>Linux-based CLI</span>
                 </div>
                 <div class="skill-item">
                     <i class="fas fa-file-excel" aria-hidden="true"></i> <span>MS Office Tools</span>
@@ -109,7 +102,7 @@
             <!-- You can re-add your skill progress bars and table here if desired -->
         </section>
 
-        <!-- Portfolio Section - Now with TWO static project cards -->
+        <!-- Portfolio Section - Now with Individual Projects and Team Projects -->
         <section class="section-box" id="portfolio" aria-labelledby="portfolio-heading">
             <h2 id="portfolio-heading">My Projects</h2>
             <div class="projects-grid">
@@ -142,6 +135,25 @@
                         </div>
                     </div>
                 </article>
+            </div>
+
+            <h3 class="team-projects-heading" id="team-projects-heading">Team Projects</h3>
+            <div class="team-projects-section">
+                <div class="video-container" aria-label="Team Project Video">
+                    <iframe 
+                        src="https://www.youtube.com/embed/mvykTntqiFI" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen 
+                        title="Team Project Video">
+                    </iframe>
+                </div>
+                <p class="team-project-description">
+                    Our team collaborated on a comprehensive project to develop an intelligent system for real-time anomaly detection in network traffic, enhancing cybersecurity defenses for small businesses.
+                </p>
+                <a href="https://gamma.app/docs/KNOWLEDGE-PACK-4nislwc3ik5041d" target="_blank" rel="noopener noreferrer" class="cta-button team-slide-link" aria-label="View Team Project Slide Deck">
+                    View Team Slide Deck <i class="fas fa-file-powerpoint" aria-hidden="true"></i>
+                </a>
             </div>
         </section>
         
