--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kingsley Koech | Cybersecurity & Software Engineer</title>
+    <title>Kingsley Kipkoech | Aspiring Cybersecurity & Software Engineer</title>
     
     <!-- Professional Meta Tags for SEO and Social Sharing -->
-    <meta name="description" content="Kingsley Koech's professional portfolio, showcasing expertise in cybersecurity, software development, and Linux-based infrastructure solutions.">
-    <meta name="keywords" content="Kingsley Koech, cybersecurity, software engineer, Linux, security automation, Terraform, AWS, Python, portfolio, web developer">
+    <meta name="description" content="Kingsley Kipkoech's professional portfolio, showcasing expertise in cybersecurity, software development, and Linux-based infrastructure solutions.">
+    <meta name="keywords" content="Kingsley Kipkoech, Aspiring cybersecurity, software engineer, Linux, security automation, Terraform, AWS, Python, portfolio, web developer">
     <meta name="author" content="Kingsley Koech">
-    <meta property="og:title" content="Kingsley Koech | Cybersecurity & Software Engineer">
+    <meta property="og:title" content="Kingsley Kipkoech | Aspiring Cybersecurity & Software Engineer">
     <meta property="og:description" content="Kingsley Koech's professional portfolio, showcasing expertise in cybersecurity, software development, and Linux-based infrastructure solutions.">
     <meta property="og:image" content="https://murray-1.github.io/My--website/me.jpeg"> <!-- Ensure this path is correct on your live site -->
     <meta property="og:url" content="https://murray-1.github.io/My--website/">
@@ -49,8 +49,8 @@
         <!-- Profile Picture & Main Heading (part of the header/hero area) -->
         <header class="hero-section" role="banner">
             <img src="me.jpeg" onerror="this.src='https://placehold.co/150x150/000/FFF?text=Your+Photo';" alt="Kingsley Koech profile photo" class="profile-pic">
-            <h1 class="site-title">Kingsley Koech</h1>
-            <h2 class="site-subtitle">Cybersecurity & Software Engineer</h2>
+            <h1 class="site-title">Kingsley Kipkoech</h1>
+            <h2 class="site-subtitle">Aspiring Cybersecurity & Software Engineer</h2>
         </header>
 
         <!-- Elevator Pitch Section - Now a Placeholder -->
