--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="project-image-background"></div>
+                            <img src="ubu.jpg"
                             <h3 id="project2-title">Ubuntu Network Manager Guide</h3>
                         </div>
                         <div class="flip-card-back">
