--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="project-image-background"></div>
+                            <img src="tech.png"
                             <h3 id="project3-title">Community Tech Education</h3>
                         </div>
                         <div class="flip-card-back">
