--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
                         <div class="flip-card-back">
                             <p id="project2-desc">A website built to guide Ubuntu users through manual installation and troubleshooting steps for Network Manager issues, helping them regain network access effectively.</p>
                             <div class="technologies"><span>HTML</span><span>CSS</span><span>Linux</span><span>Troubleshooting</span></div>
-                            <a>View Project <i class="fab fa-github" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </article>
@@ -124,7 +123,6 @@
                         <div class="flip-card-back">
                             <p id="project3-desc">Participated in a community project focused on educating students about various aspects of technology, fostering digital literacy and inspiring future tech enthusiasts.</p>
                             <div class="technologies"><span>Community Engagement</span><span>Education</span><span>Tech Literacy</span><span>Mentorship</span></div>
-                            <a href="https://github.com/kingsleykoech/your-community-project-repo" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View Community Tech Education Project on GitHub">View Project <i class="fab fa-github" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </article>
@@ -142,7 +140,7 @@
                     </iframe>
                 </div>
                 <p class="team-project-description">
-                    Our team collaborated on a comprehensive project to develop an intelligent system for real-time anomaly detection in network traffic, enhancing cybersecurity defenses for small businesses.
+                    Our team collaborated on a comprehensive project to develop an adaptive offline learning application called Knowledge pack that is set to solve access to education in marginalised areas
                 </p>
                 <a href="https://gamma.app/docs/KNOWLEDGE-PACK-4nislwc3ik5041d" target="_blank" rel="noopener noreferrer" class="cta-button team-slide-link" aria-label="View Team Project Slide Deck">
                     View Team Slide Deck <i class="fas fa-file-powerpoint" aria-hidden="true"></i>
