--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <span class="hamburger" id="hamburger" tabindex="0" role="button" aria-label="Open navigation menu" aria-controls="navLinks" aria-expanded="false">&#9776;</span>
         <div class="nav-links" id="navLinks">
             <!-- Href attributes point to section IDs for scrolling -->
+            <a href="#top">Home</a>
             <a href="#elevator-pitch">My Pitch</a>
             <a href="#about">About Me</a>
             <a href="#skills">Skills</a>
@@ -34,7 +35,14 @@
         </div>
     </nav>
 
-  
+    <!-- Main Content Area Container for all pages -->
+    <main>
+        <!-- Profile Picture & Main Heading (Home Page Section) -->
+        <header class="hero-section" id="home-section" role="banner">
+            <img src="me.jpeg" onerror="this.src='https://placehold.co/150x150/000/FFF?text=Your+Photo';" alt="Kingsley Koech profile photo" class="profile-pic">
+            <h1 class="site-title">Kingsley Kipkoech</h1>
+            <h2 class="site-subtitle">Aspiring Cybersecurity & Software Engineer</h2>
+        </header>
 
         <!-- Elevator Pitch Section - Now a Placeholder Page -->
         <section class="section-box elevator-pitch-section" id="elevator-pitch" aria-labelledby="pitch-heading">
