--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <!-- Profile Picture & Main Heading (Home Page Section) -->
         <header class="hero-section" id="home-section" role="banner">
-            <img src="me.jpeg" onerror="this.src='https://placehold.co/150x150/000/FFF?text=Your+Photo';" alt="Kingsley Koech profile photo" class="profile-pic">
+            <img src="me.jpeg" onerror="this.src='';" alt="Kingsley Kipkoech profile photo" class="profile-pic">
             <h1 class="site-title">Kingsley Kipkoech</h1>
             <h2 class="site-subtitle">Aspiring Cybersecurity & Software Engineer</h2>
         </header>
@@ -50,7 +50,7 @@
             <p>
                 To leverage my passion for cybersecurity, software development, and Linux to architect and secure robust technology infrastructure solutions, empowering organizations to thrive in a resilient digital world.
             </p>
-            <div class="video-placeholder" aria-label="Placeholder for your pitch video">
+            <div class="video-placeholder" aria-label="Placeholder for my pitch video">
                 <img src="https://placehold.co/560x315/333/64FFDA?text=Your+Pitch+Video+Here" alt="Placeholder for pitch video">
             </div>
             <a href="#portfolio" class="cta-button">Explore My Work</a>
