--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 
         <!-- Portfolio Section - Now a Page -->
         <section class="section-box" id="portfolio" aria-labelledby="portfolio-heading">
-            <h2 id="portfolio-heading">My Projects</h2>
+            <h2 id="portfolio-heading"><b><u>Portfolio</u></b></h2>
+            <h2 id="Portfolio-sub Heading">My Projects</h2>
             <div class="projects-grid">
                 <!-- Project 2: Help Ubuntu Users Website -->
                 <article class="flip-card ubuntu-site-card" aria-labelledby="project2-title">
