--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <section class="section-box" id="portfolio" aria-labelledby="portfolio-heading">
             <h2 id="portfolio-heading"><b><u>Portfolio</u></b></h2>
             <h2 id="Portfolio-sub Heading">My Projects</h2>
+            <p><i><u>Select the card to view the project description</u></i></p>
             <div class="projects-grid">
                 <!-- Project 2: Help Ubuntu Users Website -->
                 <article class="flip-card ubuntu-site-card" aria-labelledby="project2-title">
@@ -139,6 +140,7 @@
                         title="Team Project Video">
                     </iframe>
                 </div>
+                <p src="https://www.youtube.com/embed/mvykTntqiFI" p> <br>
                 <p class="team-project-description">
                     Our team collaborated on a comprehensive project to develop an adaptive offline learning application called Knowledge pack that is set to solve access to education in marginalised areas
                 </p>
@@ -156,10 +158,8 @@
             <p>I wish to collaborate!</p>
             <div class="social-links-footer" role="contentinfo" aria-label="Social Media Links">
                 <a href="https://twitter.com/kingsleykoech" target="_blank" rel="noopener noreferrer" aria-label="Twitter Profile"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                <a href="https://github.com/kingsleykoech" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i class="fab fa-github" aria-hidden="true"></i></a>
-                <a href="https://linkedin.com/in/mureikingsley" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
-                <a href="https://instagram.com/kingsleykoech" target="_blank" rel="noopener noreferrer" aria-label="Instagram Profile"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                <a href="https://facebook.com/kingsleykoech" target="_blank" rel="noopener noreferrer" aria-label="Facebook Profile"><i class="fab fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://github.com/kingsleykipkoech" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i class="fab fa-github" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/kingsley-kipkoech-09016a365" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
             </div>
         </section>
 
