--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <p>
                 To leverage my passion for cybersecurity, software development, and Linux to architect and secure robust technology infrastructure solutions, empowering organizations to thrive in a resilient digital world.
             </p>
+            <h2  u> My Elavator Pitch</u>
             <div class="video-placeholder" aria-label="Placeholder for my pitch video">
                 <img src="https://placehold.co/560x315/333/64FFDA?text=My+Pitch+Video+Here" alt="Placeholder for pitch video">
             </div>
