--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <p>
                 To leverage my passion for cybersecurity, software development, and Linux to architect and secure robust technology infrastructure solutions, empowering organizations to thrive in a resilient digital world.
             </p>
-            <h2  u> My Elavator Pitch</u>
+            <h2 id="elavator pitch heading">My elevator pitch</h2>
             <div class="video-placeholder" aria-label="Placeholder for my pitch video">
                 <img src="https://placehold.co/560x315/333/64FFDA?text=My+Pitch+Video+Here" alt="Placeholder for pitch video">
             </div>
             <a href="#portfolio" class="cta-button">Explore My Work</a>
         </section>
-
+ 
         <!-- About Section - Now a Page -->
         <section class="section-box" id="about" aria-labelledby="about-heading">
             <h2 id="about-heading">About Me</h2>
