--- a/index.html
+++ b/index.html
@@ -20,21 +20,6 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body id="top">
-  
-    <!-- Navigation -->
-    <nav aria-label="Main Navigation">
-        <span class="hamburger" id="hamburger" tabindex="0" role="button" aria-label="Open navigation menu" aria-controls="navLinks" aria-expanded="false">&#9776;</span>
-        <div class="nav-links" id="navLinks">
-            <!-- Href attributes point to section IDs for scrolling -->
-            <a href="#top">Home</a>
-            <a href="#elevator-pitch">My Pitch</a>
-            <a href="#about">About Me</a>
-            <a href="#skills">Skills</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
-        </div>
-    </nav>
-
     <!-- Main Content Area Container for all pages -->
     <main>
         <!-- Profile Picture & Main Heading (Home Page Section) -->
@@ -43,7 +28,7 @@
             <h1 class="site-title">Kingsley Kipkoech</h1>
             <h2 class="site-subtitle">Aspiring Cybersecurity & Software Engineer</h2>
         </header>
-
+<p>Elevator Pitch</p>
         <!-- Elevator Pitch Section - Now a Placeholder Page -->
         <section class="section-box elevator-pitch-section" id="elevator-pitch" aria-labelledby="pitch-heading">
             <h2 id="pitch-heading">Innovating for a Secure Digital Future</h2>
